<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.martensite</groupId>
  <artifactId>jniperf</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>jniperf</name>

  <developers>
    <developer>
      <id>geneopenminder</id>
      <name>Evgeniy Pshenitsyn</name>
      <email>geneopenminder@gmail.com</email>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.target>1.21</maven.compiler.target>
    <maven.compiler.source>1.21</maven.compiler.source>
    <java.version>21</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>install</defaultGoal>
    <sourceDirectory>src/main</sourceDirectory>
    <testSourceDirectory>src/test</testSourceDirectory>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <id>compile-native</id>
            <phase>compile</phase>
            <configuration>
              <target name="compile-native">
                <property name="build.dir" value="target"/>
                <property name="src.dir"   value="src"/>
                <property name="gcc.args"  value="-O3 -fno-omit-frame-pointer -momit-leaf-frame-pointer"/>

                <echo message="*** Compiling native lib ***"/>

                <mkdir dir="${build.dir}/native"/>

                <pathconvert property="src.native" pathsep=" ">
                  <fileset dir="${src.dir}" includes="**/*.c"/>
                </pathconvert>

                <exec os="Linux" executable="gcc">
                  <arg line="-D_GNU_SOURCE -fPIC -shared -Wl,-soname,jniperf.so ${gcc.args}
                              -o ${build.dir}/native/jniperf.so
                              -I ${java.home}/include -I ${java.home}/include/linux
                              -I ${java.home}/../include -I ${java.home}/../include/linux
                              ${src.native} -ldl -lrt"/>
                </exec>
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>21</release>
          <source>21</source>
          <target>21</target>
          <compilerArgs>
            <arg>--enable-preview</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
